Use RexList of carray pre agg arguments for intermediate stage and remove literal hints in AggCalls